--- a/EducationSystem/ES.Application/ES.Application.csproj
+++ b/EducationSystem/ES.Application/ES.Application.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ES.Infrastructure\ES.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
